opt: 关节速度优化

--- a/src/panda_moveit_config/config/joint_limits.yaml
+++ b/src/panda_moveit_config/config/joint_limits.yaml
@@ -11,45 +11,45 @@ joint_limits:
   panda_finger_joint1:
     has_velocity_limits: true
     max_velocity: 0.20000000000000001
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 1.0
   panda_finger_joint2:
     has_velocity_limits: true
     max_velocity: 0.20000000000000001
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 1.0
   panda_joint1:
     has_velocity_limits: true
     max_velocity: 2.3925000000000001
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 1.0
   panda_joint2:
     has_velocity_limits: true
     max_velocity: 2.3925000000000001
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 1.0
   panda_joint3:
     has_velocity_limits: true
     max_velocity: 2.3925000000000001
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 1.0
   panda_joint4:
     has_velocity_limits: true
     max_velocity: 2.3925000000000001
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 1.0
   panda_joint5:
     has_velocity_limits: true
     max_velocity: 2.871
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 1.0
   panda_joint6:
     has_velocity_limits: true
     max_velocity: 2.871
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 1.0
   panda_joint7:
     has_velocity_limits: true
     max_velocity: 2.871
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 1.0
